--- a/ControlPlane/ControlPlane.csproj
+++ b/ControlPlane/ControlPlane.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CC.cs" />
+    <Compile Include="ClientCallComponent.cs" />
+    <Compile Include="ControlNode.cs" />
     <Compile Include="CPCC.cs" />
     <Compile Include="DirectoryClass.cs" />
     <Compile Include="LRM.cs" />
